--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,6 @@ body {
 .game {
   height: 100%;
   width: 100%;
-  overflow: hidden;
 }
 
 .players-container {
